--- a/Guess The School/src/App.css
+++ b/Guess The School/src/App.css
@@ -3,6 +3,10 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  height: 40em;
+  background-color: #1c1a1ab7;
+  -webkit-backdrop-filter: blur(1px);
+  backdrop-filter: blur(1px);
 }
 
 .logo {
@@ -32,6 +36,7 @@
     animation: logo-spin infinite 20s linear;
   }
 }
+
 
 .card {
   padding: 2em;
